# raspi-mp3-player

./: README.md  pyproject.toml  sound3.py
