[tool.poetry]
name = "raspi-mp3-player"
version = "0.1.0"
description = ""
authors = ["Peter Krauss <peter.krauss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
